--- a/.dockerignore
+++ b/.dockerignore
@@ -1,6 +1,7 @@
 # Git
 .git
 .gitignore
+.gitattributes
 
 # Python
 __pycache__/
@@ -24,24 +25,40 @@ wheels/
 *.egg-info/
 .installed.cfg
 *.egg
+.pytest_cache/
+.coverage
+htmlcov/
+.tox/
 
 # Virtual Environment
 venv/
 .env
+.venv/
+ENV/
 
 # IDE
 .idea/
 .vscode/
 *.swp
 *.swo
-
-# Chroma
-data/chroma/
+*.swn
+*.bak
 
 # Node
 node_modules/
 frontend/
+npm-debug.log
+yarn-debug.log
+yarn-error.log
 
 # Docker
 Dockerfile
-.dockerignore 
+.dockerignore
+
+# Logs
+*.log
+logs/
+
+# Local development
+*.local
+.DS_Store 
