--- a/.dockerignore
+++ b/.dockerignore
@@ -1,7 +1,6 @@
 # Git
 .git
 .gitignore
-.gitattributes
 
 # Python
 __pycache__/
@@ -21,44 +20,23 @@ lib64/
 parts/
 sdist/
 var/
-wheels/
 *.egg-info/
 .installed.cfg
 *.egg
-.pytest_cache/
-.coverage
-htmlcov/
-.tox/
-
-# Virtual Environment
 venv/
 .env
-.venv/
-ENV/
 
 # IDE
 .idea/
 .vscode/
 *.swp
 *.swo
-*.swn
-*.bak
 
-# Node
-node_modules/
+# Project specific
+data/chroma/
 frontend/
-npm-debug.log
-yarn-debug.log
-yarn-error.log
-
-# Docker
-Dockerfile
-.dockerignore
-
-# Logs
 *.log
-logs/
-
-# Local development
-*.local
-.DS_Store 
+README.md
+deploy.sh
+Dockerfile
+.dockerignore 
