--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,12 +19,14 @@
     "react-icons": "^5.0.1",
     "react-markdown": "^9.0.1",
     "react-spinners": "^0.13.8",
-    "remark-gfm": "^4.0.0"
+    "remark-gfm": "^4.0.0",
+    "uuid": "^11.1.0"
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.10",
     "@types/react": "^18.2.48",
     "@types/react-dom": "^18.2.18",
+    "@types/uuid": "^10.0.0",
     "@vitejs/plugin-react": "^4.2.1",
     "autoprefixer": "^10.4.17",
     "eslint": "^8.56.0",
