--- a/frontend/.gitignore
+++ b/frontend/.gitignore
@@ -1,11 +1,7 @@
 # Logs
 logs
 *.log
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
 pnpm-debug.log*
-lerna-debug.log*
 
 node_modules
 dist
@@ -24,3 +20,5 @@ dist-ssr
 *.njsproj
 *.sln
 *.sw?
+
+.trace/*
