--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,11 +1,27 @@
 {
-  "name": "frontend",
-  "private": true,
-  "version": "0.0.0",
+  "name": "aptos-chatbot-plugin",
+  "version": "0.0.1",
+  "description": "Embeddable Aptos AI chatbot component for React applications",
   "type": "module",
+  "main": "dist/index.js",
+  "module": "dist/index.es.js",
+  "types": "dist/types/components/plugin/index.d.ts",
+  "files": [
+    "dist"
+  ],
+  "keywords": [
+    "aptos",
+    "chatbot",
+    "ai",
+    "learning",
+    "react",
+    "component",
+    "plugin"
+  ],
   "scripts": {
     "dev": "vite",
-    "build": "tsc -b && vite build",
+    "build": "tsc && vite build",
+    "build:lib": "BUILD_LIB=true tsc && vite build",
     "type-check": "tsc --noEmit",
     "type-check:watch": "tsc --noEmit --watch",
     "lint": "eslint .",
@@ -15,21 +31,28 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@headlessui/react": "^2.2.0",
+    "@types/react-syntax-highlighter": "^15.5.13",
     "axios": "^1.6.7",
     "daisyui": "^4.6.1",
     "framer-motion": "^11.0.3",
+    "lodash": "^4.17.21",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.0.1",
     "react-markdown": "^9.0.1",
+    "react-router-dom": "^7.2.0",
     "react-spinners": "^0.13.8",
+    "react-syntax-highlighter": "^15.6.1",
     "remark-gfm": "^4.0.0",
     "uuid": "^11.1.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
     "@tailwindcss/typography": "^0.5.10",
+    "@types/lodash": "^4.17.15",
+    "@types/node": "^20.11.30",
     "@types/react": "^18.2.48",
     "@types/react-dom": "^18.2.18",
     "@types/uuid": "^10.0.0",
@@ -49,7 +72,8 @@
     "tailwindcss": "^3.4.1",
     "typescript": "^5.3.3",
     "typescript-eslint": "^8.25.0",
-    "vite": "^5.0.12"
+    "vite": "^5.0.12",
+    "vite-plugin-dts": "^4.5.1"
   },
   "packageManager": "pnpm@9.0.0"
 }
