--- a/.gitignore
+++ b/.gitignore
@@ -32,9 +32,8 @@ node_modules/
 .env.test.local
 .env.production.local
 
-# Chroma
-data/chroma/
-data/developer-docs
+# Vector Store
+data/
 
 # IDE
 .idea/
