--- a/requirements.txt
+++ b/requirements.txt
@@ -8,11 +8,12 @@ langchain-community>=0.3.0
 langchain-core>=0.3.0
 pydantic>=2.7.4,<3.0.0
 python-multipart==0.0.9
-chromadb==0.4.22
 tiktoken>=0.8.0
 unstructured>=0.10.30
 markdown>=3.4.3
 python-magic>=0.4.27
 pyyaml>=6.0.1
 firebase-admin>=6.4.0
-langchain-chroma>=0.2.2
+faiss-cpu>=1.7.4
+cohere>=5.0.0
+bl
