--- a/frontend/package.json
+++ b/frontend/package.json
@@ -27,6 +27,7 @@
     "lint": "eslint .",
     "lint-fix": "eslint . --fix",
     "format": "prettier --write .",
+    "format-check": "prettier --check .",
     "safe-build": "pnpm run format && pnpm run lint-fix && tsc --noEmit && vite build",
     "preview": "vite preview"
   },
