--- a/demo/package.json
+++ b/demo/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
+    "lint": "eslint src --ext .ts,.tsx",
     "preview": "vite preview"
   },
   "dependencies": {
@@ -13,19 +14,23 @@
     "@aptos/chatbot-ui-base": "workspace:*",
     "@aptos/chatbot-ui-tailwind": "workspace:*",
     "@heroicons/react": "^2.2.0",
-    "@types/react-syntax-highlighter": "^15.5.13",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-syntax-highlighter": "^15.6.1",
-    "tailwindcss": "^3.0.0"
+    "tailwindcss": "^3.0.0",
+    "@types/react-syntax-highlighter": "^15.5.13"
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.16",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
-    "@types/uuid": "^10.0.0",
+    "@typescript-eslint/eslint-plugin": "^6.0.0",
+    "@typescript-eslint/parser": "^6.0.0",
     "@vitejs/plugin-react": "^4.0.0",
     "autoprefixer": "^10.0.0",
+    "eslint": "^8.0.0",
+    "eslint-plugin-react": "^7.0.0",
+    "eslint-plugin-react-hooks": "^4.0.0",
     "postcss": "^8.0.0",
     "typescript": "^5.0.0",
     "vite": "^5.0.0"
