--- a/package.json
+++ b/package.json
@@ -17,5 +17,8 @@
     "prettier": "^3.2.5",
     "tsup": "^8.0.2"
   },
-  "packageManager": "pnpm@9.0.0"
+  "packageManager": "pnpm@9.0.0",
+  "dependencies": {
+    "uuid": "^11.1.0"
+  }
 }
