--- a/demo/package.json
+++ b/demo/package.json
@@ -6,9 +6,11 @@
     "dev": "vite",
     "build": "tsc && vite build",
     "lint": "eslint src --ext .ts,.tsx",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "format": "prettier --write ."
   },
   "dependencies": {
+    "prettier": "^3.3.3",
     "@aptos/chatbot-core": "workspace:*",
     "@aptos/chatbot-react": "workspace:*",
     "@aptos/chatbot-ui-base": "workspace:*",
