--- a/demo/package.json
+++ b/demo/package.json
@@ -10,17 +10,18 @@
     "format": "prettier --write ."
   },
   "dependencies": {
-    "prettier": "^3.3.3",
     "@aptos/chatbot-core": "workspace:*",
     "@aptos/chatbot-react": "workspace:*",
     "@aptos/chatbot-ui-base": "workspace:*",
     "@aptos/chatbot-ui-tailwind": "workspace:*",
+    "@aptos/demo": "link:",
     "@heroicons/react": "^2.2.0",
+    "@types/react-syntax-highlighter": "^15.5.13",
+    "prettier": "^3.3.3",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-syntax-highlighter": "^15.6.1",
-    "tailwindcss": "^3.0.0",
-    "@types/react-syntax-highlighter": "^15.5.13"
+    "tailwindcss": "^3.0.0"
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.16",
